production hosting configs

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -2,8 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "WebAPI.Services.CalendarService": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cache": {
+    "DefaultExpirationMinutes": 60
+  },
+  "BirApi": {
+    "BaseUrl": "https://bir.no/adressesoek/toemmekalender/",
+    "TimeoutSeconds": 30,
+    "UserAgent": "BIR-Calendar-API/1.0"
+  }
 }
